@@ -11,12 +11,12 @@
 
     <div id="cea2034plots" data-num="0">
       <div class="plotForm">
-	<div class="section has-background-light">
+	<div class="section has-background-light px-1 py-1">
 
-	  <nav class="level">
+	  <nav class="level px-1 py-1">
 	    % for name, number in (("A", 0), ("B", 1)):
-	    <div class="level-item">
-	      <div class="box">
+	    <div class="level-item px-1 py-1">
+	      <div class="box px-1 py-1">
 		<p class="title is-4 has-text-centered">Speaker ${name}</p>
 		% for label, field in (("Name", "speaker"), ("Origin", "origin"), ("Version", "version")):
 		<fieldset id="compare-fieldset-${field}${number}">
@@ -41,9 +41,9 @@
 	    % endfor
 	  </nav>
 	  
-	  <nav class="level">
-	    <div class="level-item">
-	      <div class="box">
+	  <nav class="level px-1 py-1">
+	    <div class="level-item px-1 py-1">
+	      <div class="box px-1 py-1">
 		<p class="title is-4 has-text-centered">Compare</p>
 		<div class="field is-horizontal">
 		  <div class="field-label is-normal">
