@@ -16,7 +16,7 @@
         </div>
       </div>
       <div class="level-item is-hidden-mobile py-0 my-0">
-        <a href="/" class="is-size-4 is-hidden-mobile">
+        <a href="/" class="is-size-4">
           <img src="/icons/icon-bookshelves.svg" alt="SPINorama" width="44">
           <b>SPIN</b>orama
         </a>
