@@ -1,3 +1,11 @@
+2023-11-12  pierre  <pierre@spin.internet-box.ch>
+
+	* tests/test_go.py: tests are not passing for mysterious reasons
+
+	* src/website/nav_simple.html: add logo back on mobile
+
+	* src/website/assets/similar.js: add support for radar plot
+
 2023-11-11  pierre  <pierre@spin.internet-box.ch>
 
 	* src/website/assets/common.js: split title over 2 lines if too long
